# discordbot-valory

./: Cargo.toml  README.md  ai_chatbot.py  newai_chatbot.py
src/: handler.rs  main.rs
src/commands/: mod.rs  setup_bot.rs  start_chatbot.rs
src/db/: mod.rs  user.rs
