[package]
name = "discordBot"
version = "0.1.0"
authors = ["PotatoFemboy"]
edition = "2021"



[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
mongodb = "2.8"
tokio = { version = "1", features = ["full", "sync"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
serde_json = "1.0.143"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
chrono = "0.4.42"
regex = "1.11.2"
once_cell = "1.21.3"
